# dlpdl

./: .gitignore  CHANGELOG.md  COPYRIGHT  NOTICES.md  README.md  pyproject.toml  requirements.txt  start.ps1
backend/: __init__.py  clip_parse.py  downloader.py  hls_clipper.py  main.py  smart_clip.py
deploy/: Dockerfile  SYNOLOGY.md  docker-compose.yml
docs/: BEHAVIOR.md
extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension/icons/: README.txt
extension/lib/: clip-direct-api.js  content-i18n.js  format-time.js  i18n.js  jobs-client.js  local-store.js  media-sniffer.js  open-ui.js  page-key.js  page-url.js  storage.js  tab-session.js  time.js
extension/lib/locales/: de.json  en.json
ui/: app.js  i18n.js  index.html  style.css
ui/locales/: de.json  en.json
