[project]
name = "clip-direct"
version = "1.1.1"
description = "Browser-extension-driven clip downloads with smart HLS fallback"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "yt-dlp[default]>=2024.1",
]

[project.scripts]
clip-direct = "backend.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
